--- a/src/components/testimonial/style.scss
+++ b/src/components/testimonial/style.scss
@@ -40,7 +40,7 @@
 			
 			font-family: 'Graphik';
 			font-size: 20px;
-			line-height: 6px;
+			// line-height: 6px;
 			font-weight: 500;
 			text-align: center;
 			margin-left: auto;
