--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -8,7 +8,58 @@
   z-index: 99;
   font-family: 'Graphik';
 
+  .ant-menu{
+    background: transparent;
+    font-size: 16px;
+    color:#fff;
+    font-weight: 500;
+
+    &.ant-menu-horizontal{
+      border-bottom: 0px;
+      .ant-menu-item,.ant-menu-submenu{
+        margin-right: 25px;
+        cursor: pointer;
+        a{
+          color: white;
+          &:hover {
+            text-decoration: none;
+            color: #363636;
+          }
+        }
+        
+      }
+      .ant-menu-item{
+        border-bottom: 0px;
+        &.ant-menu-item-active{
+          border-bottom: 0px;
+        }
+        &.ant-menu-item:last-child {
+          margin-right: 0;
+        }
+      }
+      .ant-menu-submenu{
+         border-bottom: 0px;
+        &.ant-menu-submenu-active{
+          .ant-menu-submenu-title{
+            color: #363636;
+          }
+          border-bottom: 0px;
+        }
+        .ant-menu{
+          border-radius: 0px;
+        }
+      }
+     
+      
+    }
+  }
+
+  
+ 
+
   &.white {
+    position: fixed;
+    top: 0px;
     background: white;
     color: #363636;
     height: 70px;
@@ -18,6 +69,25 @@
     -o-animation: fadein 1s;
     animation: fadein 1s;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+    a {
+      color: #363636;
+
+      &:hover {
+        color: #7cb342;
+      }
+    }
+    .ant-menu{
+      color: #363636;
+      &.ant-menu-horizontal{
+        .ant-menu-item,.ant-menu-submenu{
+          cursor: pointer;
+          a{
+            color: #363636;
+          }
+          
+        }
+      }
+    }
   }
 
   &-container {
@@ -90,16 +160,6 @@
     a:last-child {
       margin-right: 0;
     }
-
-    &.white {
-      a {
-        color: #363636;
-
-        &:hover {
-          color: #7cb342;
-        }
-      }
-    }
   }
 
   &-button {
@@ -158,6 +218,21 @@
   }
 }
 
+.ant-menu-submenu-popup {
+  border-radius: 0px !important;
+}
+.ant-menu-item-group-title{
+  padding:0px !important;
+}
+
+.ant-menu-item-group-list{
+  .ant-menu-item{
+    padding: 0px !important;
+  }
+  .dropdown-item{
+    text-align: left !important;
+  }
+}
 @media screen and (max-width: 600px) {
   .header {
     &.white {
@@ -253,6 +328,8 @@
   width: 100%;
   z-index: 99;
   position: fixed;
+
+  
 	
 	&.scroll{
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
@@ -283,53 +360,77 @@
     font-size: 17px;
     line-height: 23px;
 
-    a {
-      margin-right: 60px;
+    .ant-menu{
+      background: transparent;
+      font-size: 16px;
       color: #363636;
-      cursor: pointer;
-    }
-
-    a:last-child {
-      margin-right: 0;
-    }
-
-
-    .dropdown{
-      margin-right: 60px;
-      cursor: pointer;
-      color: white;
-        &.gray{
-          .dropdown-toggle{
-            color: white;
+      font-weight: 500;
+  
+      &.ant-menu-horizontal{
+        border-bottom: 0px;
+        .ant-menu-item,.ant-menu-submenu{
+          margin-right: 25px;
+          cursor: pointer;
+          a{
+            color: #363636;
+            &:hover {
+              text-decoration: none;
+              color: #363636;
+            }
+          }
+          
         }
+        .ant-menu-item{
+          border-bottom: 0px;
+          &.ant-menu-item-active{
+            border-bottom: 0px;
+          }
+          &.ant-menu-item:last-child {
+            margin-right: 0;
+          }
+        }
+        .ant-menu-submenu{
+           border-bottom: 0px;
+          &.ant-menu-submenu-active{
+            .ant-menu-submenu-title{
+              color: #363636;
+            }
+            border-bottom: 0px;
+          }
+          .ant-menu{
+            border-radius: 0px;
+          }
+        }
+       
+        
       }
-
-      .dropdown-toggle{
-        font-weight: 500;
-        padding-top: 0px;
-        cursor: pointer;
-        color: #363636;
-
-        &:hover {
-          text-decoration: underline;
-        }
-        &:focus {
-          border: none;
-          box-shadow: none;
-        }
     }
-    .dropdown-menu{
-      border: none;
-        a{
-          color: #363636;
-        }
-      }
-
-    }
+  
 
     &.gray {
-      a {
+      .ant-menu{
         color: white;
+        &.ant-menu-horizontal{
+          .ant-menu-item,.ant-menu-submenu{
+            cursor: pointer;
+            a{
+              color: white;
+              &:hover {
+                color: white;
+              }
+            }
+            
+          }
+
+          .ant-menu-submenu{
+            border-bottom: 0px;
+           &.ant-menu-submenu-active{
+             .ant-menu-submenu-title{
+              color: white;
+             }
+           }
+         }
+        }
       }
     }
   }
