--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -18,9 +18,6 @@
       border-bottom: 0px;
       .ant-menu-item,.ant-menu-submenu{
         margin-right: 25px;
-        @media screen and (max-width: 768px) and (min-width: 601px){
-          margin-right: 0px;
-        }
         cursor: pointer;
         a{
           color: white;
@@ -182,10 +179,6 @@
       background-color: #fff;
       border: none !important;
       border-radius: 5px !important;
-
-      @media screen and (max-width: 768px) and (min-width: 601px){
-       line-height: 14px;
-      }
     }
     &.white {
       button{
@@ -234,7 +227,9 @@
 
 .ant-menu-item-group-list{
   .ant-menu-item{
-    padding: 0px !important;
+
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
   .dropdown-item{
     text-align: left !important;
@@ -415,7 +410,6 @@
   
 
     &.gray {
-      background-color: transparent !important;
       .ant-menu{
         color: white;
         &.ant-menu-horizontal{
@@ -449,7 +443,6 @@
     transition: all 1s ease;
     margin: auto 0 auto 16px;
     cursor: pointer;
-
     &.gray {
       button{
         background: white !important;
