--- a/components/assets/components/style.scss
+++ b/components/assets/components/style.scss
@@ -76,48 +76,48 @@
 
         &-header {
           height: 100px;
-          background: url('/static/img/static_header.png') no-repeat center center;
+          background: url('/static/img/assets_header.png') no-repeat center center;
           background-size: 100%;
 
           @media screen and (max-width: 600px) {
-            background: url('/static/img/static_header_mobile.png') no-repeat center center;
+            background: url('/static/img/assets_header_mobile.png') no-repeat center center;
           }
         }
 
         &-footer {
-          background: url('/static/img/static_footer.png') no-repeat center center;
+          background: url('/static/img/assets_footer.png') no-repeat center center;
           background-size: 100%;
           height: 250px;
 
           @media screen and (max-width: 600px) {
             height: 505px;
             width: 100%;
-            background: url('/static/img/static_footer_mobile.png') no-repeat center center;
+            background: url('/static/img/assets_footer_mobile.png') no-repeat center center;
           }
         }
 
         &-bread {
           height: 100px;
-          background: url('/static/img/static_bread.png') no-repeat center center;
+          background: url('/static/img/assets_bread.png') no-repeat center center;
           background-size: 100%;
 
           @media screen and (max-width: 600px) {
             height: 50px;
             width: 100%;
-            background: url('/static/img/static_bread_mobile.png') no-repeat center center;
+            background: url('/static/img/assets_bread_mobile.png') no-repeat center center;
           }
         }
 
         &-code {
           height: 100px;
-          background: url('/static/img/static_code.png') no-repeat center center;
+          background: url('/static/img/assets_code.png') no-repeat center center;
           background-size: 100%;
           height: 250px;
 
           @media screen and (max-width: 600px) {
             height: 350px;
             width: 100%;
-            background: url('/static/img/static_code_mobile.png') no-repeat center center;
+            background: url('/static/img/assets_code_mobile.png') no-repeat center center;
           }
         }
       }
