--- a/components/assets/logo/style.scss
+++ b/components/assets/logo/style.scss
@@ -56,14 +56,14 @@
 
       &-img {
         width: 100%;
-        background: url('../../../assets/img/logo_guideline.png') no-repeat center center;
+        background: url('/static/img/logo_guideline.png') no-repeat center center;
         background-size: 510px 158px;
         width: 100%;
         height: 200px;
 
         @media screen and (max-width: 600px) {
           width: 100%;
-          background: url('../../../assets/img/logo_guideline_green.png') no-repeat center center;
+          background: url('/static/img/logo_guideline_green.png') no-repeat center center;
           background-size: 260px 80px;
           width: 100%;
           height: 120px;
